--- a/views/tokens_create.html
+++ b/views/tokens_create.html
@@ -9,7 +9,7 @@
     <script type="text/javascript" src="../static/js/sweetalert.min.js"></script>
     <script type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     <script type="text/javascript" src="../static/js/ui.js"></script>
 
     <title>AEasy SDK official website | allows you to quickly, conveniently, complete the development of pp block chain
@@ -52,19 +52,28 @@
     <div class="bg8 animated  flipInX delay-2s"></div>
 
 </div>
-
-<div class="header  animated 1 fadeInDown delay-0s slow">
-    <img src="../static/img/login_header.png">
-
+<div class="header-base" style="  display: inline-table;
+    align-items: center; /*定义body的元素垂直居中*/
+    justify-content: center; /*定义body的里的元素水平居中*/
+    background: white;
+    height: 79px;
+    position: absolute;
+    width: 100%;">
+<div class="header" id="navbg">
+    <div class="logo animated 1 fadeInDown delay-0s" id="logo">
+        <img style="width: 40px;position: relative;top: 10px" src="../static/img/logo_bai.png"/>
+        <span class="name">AEASY</span>
+    </div>
     <div class="menu">
         <ul>
-            <li><a href="https://www.showdoc.cc/AEASY" target="_blank">DOCUMENT</a></li>
-            <li><a id="go-logout" class="login" href="#">LOGOUT</a></li>
+
+            <li><a href="https://www.showdoc.cc/AEASY">DOCUMENT</a></li>
+            <li><a class="login" id="go-logout" href="#">LOGOUT</a></li>
         </ul>
     </div>
 </div>
 
-
+</div>
 <div class="body">
 
 
