--- a/static/css/login.css
+++ b/static/css/login.css
@@ -38,19 +38,23 @@ li {
 /*}*/
 .header{
     z-index: 999;
+    width: 100%;
+    height: 80px;
+    text-align: center;
 }
 
 .header img{
-    width: 100%;
+    height: 118px;
+    margin: auto 0;
 }
 
 
 .base {
-    width: 100%;
-    height: 100%;
-    background: white;
     display: flex;
-    overflow: hidden;
+    align-items: center; /*定义body的元素垂直居中*/
+    justify-content: center; /*定义body的里的元素水平居中*/
+    height: 100%;
+
 }
 
 
@@ -69,6 +73,7 @@ li {
      width: 100%;
      height: 100%;
     z-index: -1;
+     position: absolute;
     overflow: hidden;
 }
 
@@ -179,11 +184,7 @@ li {
 .content {
     width: 500px;
     height: 500px;
-    position: absolute;
-    left: 50%;
-    top: 180px;
-    z-index: 998;
-    margin-left: -250px;
+    position: relative;
 }
 
 .content .div-login {
