--- a/static/css/tokens_create.css
+++ b/static/css/tokens_create.css
@@ -4,18 +4,20 @@
     margin: 0;
 }
 
-body {
+html,body {
     width: 100%;
     height: 100%;
-    overflow: hidden;
+    margin: 0;
+    padding: 0;
 }
+
 
 .bg {
     width: 100%;
     height: 100%;
     z-index: -1;
     overflow: hidden;
-    background: #1F9CFF;
+    position: absolute;
 }
 
 .bg .bg1 {
@@ -30,7 +32,7 @@ body {
 .bg .bg2 {
     width: 45px;
     height: 45px;
-    top: 150px;
+    top: 170px;
     left: 544px;
     z-index: -1;
     position: absolute;
@@ -113,14 +115,6 @@ body {
 }
 
 
-.header {
-    z-index: 999;
-}
-
-.header img {
-    width: 100%;
-}
-
 .div-bg {
     overflow: hidden;
     width: 100%;
@@ -138,116 +132,165 @@ body {
 }
 
 
-.bg {
-    transform: rotate(-40deg);
-    background-image: linear-gradient(116deg, #5E3AFF 0%, #F7296E 50%);
-    border-radius: 463px;
-    width: 100%;
-    height: 100%;
-    position: relative;
-    right: -40%;
-    top: -65%;
-
-    box-shadow: -30px 0px 10px rgba(0, 0, 0, 0.1);
-
-}
 
 
 .body {
-    width: 100%;
+    display: flex;
+    align-items: center; /*定义body的元素垂直居中*/
+    justify-content: center; /*定义body的里的元素水平居中*/
     height: 100%;
-    margin: auto;
 }
 
+
+.header {
+    position: absolute;
+    height: 79px;
+    top: 0;
+    margin-left: -640px;
+    width: 1280px;
+    left: 50%;
+    z-index: 1;
+}
 
 
 
 .header .logo {
-    width: 200px;
-    line-height: 80px;
+    width: 252px;
     float: left;
-    font-size: 22px;
-    z-index: 1;
-    font-weight: bold;
-    margin-left: 5px;
-    font-family: Roboto-Black, serif;
+    height: 79px;
+    margin-left: 106px;
+    background-image: linear-gradient(129deg, #E71766 0%, #FF4D90 100%);
+    border-radius: 0px 0px 100px 100px;
+    text-align: center;
+    line-height: 79px;
 }
 
-.header .logo img {
-    width: 100px;
-    height: 100px;
-    margin-top: -10px;
-    margin-left: -20px;
-}
 
+.header .logo .name {
+    font-family: Avenir-Heavy;
+    font-size: 26px;
+    color: #FFFFFF;
+    line-height: 80px;
+    text-align: center;
+    margin-left: 10px;
+    letter-spacing: 0.36px;
+}
 
 .header .menu {
-    height: 150px;
+    height: 79px;
     float: right;
-    position: absolute;
-    right: 100px;
-    top: 0;
+    margin-right: 75px;
 }
 
 
 .header .menu li {
     float: left;
     list-style-type: none;
-    height: 150px;
+    height: 79px;
     display: block;
 }
 
 .header .menu li > a {
-    font-family: PingFangSC-Regular, serif;
-    font-size: 14px;
     text-align: center;
     margin-left: 25px;
-    height: 30px;
+    height: 40px;
     padding-left: 15px;
     padding-right: 15px;
     text-decoration: none;
-    color: #fff;
     font-weight: bold;
     display: block;
-    line-height: 30px;
-    margin-top: 45px;
+    line-height: 40px;
+    margin-top: 20px;
+    font-family: Roboto-Regular;
+    font-size: 14px;
+    color: #384655;
+    letter-spacing: 0;
 
 }
 
 
 .header .menu li > a:hover {
     text-decoration: none;
-    color: #fff;
+    color: #E51363;
 }
 
 .header .menu li .login {
-    border-radius: 15px;
-    border-color: #fff;
+    border-radius: 25px;
+    color: #384655;
+    width: 60px;
     border-style: solid;
     border-width: 1px;
 }
 
 .header .menu li .login:hover {
-    border-radius: 15px;
-    border-color: white;
-    color: #F83C92;
-    background-color: white;
+    border-color: #E51363;
+    color: #FFFFFF;
+    background-color: #E51363;
     border-style: solid;
     border-width: 1px;
 }
 
 
+.ui-search-select-list-aepps {
+    position: absolute;
+    text-align: center;
+    display: none;
+    flex-direction: column;
+    border-radius: 5px;
+    background-color: white;
+    overflow: hidden;
+    margin-left: 30px;
+    border-color: #384655;
+    color: #FFFFFF;
+    border-style: solid;
+    border-width: 1px;
+}
+
+
+.ui-search-select-list-zoology {
+    position: absolute;
+    text-align: center;
+    display: none;
+    flex-direction: column;
+    border-radius: 5px;
+    background-color: white;
+    overflow: hidden;
+    margin-left: 30px;
+    border-style: solid;
+    border-color: #384655;
+    border-width: 1px;
+}
+
+.w1280 {
+    width: 1230px;
+    margin: 0 auto;
+    overflow: hidden;
+}
+
+.select-item {
+    flex: 1;
+    background-color: #ffffff;
+    color: #384655;
+    line-height: 55px;
+    text-decoration: none;
+    font-size: 20px;
+    padding-left: 15px;
+    padding-right: 15px;
+    display: block;
+    font-weight: bold;
+}
+
+.select-item:hover {
+    color: #E51363;
+    background-color: #f1f1f1;
+}
 
 
 .card {
-    width: 100%;
-    background: rgb(255, 255, 255);
+    width: 1280px;
     overflow: hidden;
     /*水平居中*/
-    font-weight: 500;
-    letter-spacing: -.5px;
-    text-align: center;
-    margin-bottom: 50px;
+    position: relative;
 
 }
 
@@ -277,14 +320,11 @@ body {
 .card .left .p-qraddress {
     margin-top: 10px;
 }
+
 .card .left .code {
 
     margin-top: 30px;
 }
-
-
-
-
 
 
 .card .left .div-address {
@@ -341,7 +381,6 @@ body {
 }
 
 
-
 .p-hint {
     width: 400px;
     height: 24px;
@@ -361,9 +400,9 @@ body {
     border-width: 1px;
     text-align: center;
     font-size: 20px;
-    font-weight:bold;
+    font-weight: bold;
     outline: none;
-    text-transform:uppercase;
+    text-transform: uppercase;
 }
 
 .card .start {
@@ -400,17 +439,20 @@ body {
     color: #000000;
 }
 
-.private{
+.private {
     color: #4f4f4f;
     font-size: 16px;
     text-align: left;
-    position: relative; top: 35%; left: 0; transform: translateY(-50%);
+    position: relative;
+    top: 35%;
+    left: 0;
+    transform: translateY(-50%);
     line-height: 22px;
     margin-left: 20px;
     margin-right: 40px;
 }
 
-.bonus{
+.bonus {
     color: #4f4f4f;
     font-size: 15px;
     text-align: left;
@@ -418,6 +460,7 @@ body {
     margin-left: 20px;
     margin-right: 40px;
 }
+
 .p-service {
     text-align: center;
     position: absolute;
