fix name bug , review index img

--- a/views/index.html
+++ b/views/index.html
@@ -501,7 +501,7 @@
         width: 394px;
         height: 561px;
         border-radius: 10px;
-        background: url("http://img1.imgtn.bdimg.com/it/u=41575291,1968829815&fm=214&gp=0.jpg") no-repeat;
+        background: url("https://08.imgmini.eastday.com/mobile/20180103/20180103003845_36a70c28096130f72bced4fb2b983bdd_1.jpeg") no-repeat;
         box-shadow: 0px 30px 30px rgba(251, 68, 149, 0.1);
         right: 384px;
         bottom: 493px;
@@ -518,7 +518,7 @@
         background: #000000;
         left: 384px;
         box-shadow: 0px 30px 30px rgba(251, 68, 149, 0.1);
-        background: url("http://imgsrc.baidu.com/forum/w=580/sign=577339886509c93d07f20effaf3cf8bb/341ac81349540923433010f89058d109b2de4902.jpg") no-repeat;
+        background: url("https://imgsrc.baidu.com/forum/w=580/sign=577339886509c93d07f20effaf3cf8bb/341ac81349540923433010f89058d109b2de4902.jpg") no-repeat;
         top: 493px;
         background-size: 100% 100%;
         background-position-x: center;
@@ -699,14 +699,14 @@
             <ul>
                 <li><a href="#">HOME</a></li>
                 <li>
-                    <a class="down-arrow-aepps" target="_blank" href="http://wetrue.io">WETRUE</a>
+                    <a class="down-arrow-aepps" target="_blank" href="https://wetrue.io">WETRUE</a>
                     <div class="ui-search-select-list-aepps">
                         <a class="select-item" href="https://base.aepps.com/">BASE</a>
                         <a class="select-item" href="https://airgap.it/">WETRUE</a>
                     </div>
                 </li>
                 <li>
-                    <a class="down-arrow-zoology" target="_blank" href="http://aeknow.org">AEKNOW</a>
+                    <a class="down-arrow-zoology" target="_blank" href="https://aeknow.org">AEKNOW</a>
                     <div class="ui-search-select-list-zoology">
                         <a class="select-item" href="https://www.aechina.io/">AECHNIA</a>
                         <a class="select-item" href="https://www.aeknow.org/">AEKNOW</a>
