--- a/views/login.html
+++ b/views/login.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="shortcut icon" type="image/x-icon" href="../static/img/favicon.ico"/>
     <link rel="stylesheet" type="text/css" href="../static/css/login.css">
-    <script src="http://cdn.bootcss.com/jquery/1.11.0/jquery.min.js" type="text/javascript"></script>
-    <script type="text/javascript" src="http://www.gongjuji.net/Content/files/jquery.md5.js"></script>
+
+    <script type="text/javascript" src="../static/js/jquery-1.7.1.min.js"></script>
     <script type="text/javascript" src="../static/js/sweetalert.min.js"></script>
+    <script type="text/javascript" src="../static/js/jquery.md5.js"></script>
     <script type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js"></script>
 
