--- a/views/pay.html
+++ b/views/pay.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" type="text/css" href="../static/css/accredit.css">
     <script type="text/javascript" src="../static/js/jquery-1.7.1.min.js"></script>
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-    <script type="text/javascript" src="http://www.gongjuji.net/Content/files/jquery.md5.js"></script>
+    <script type="text/javascript" src="../static/js/jquery.md5.js"></script>
     <script type="text/javascript"
             src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js"></script>
 
