update doc update ae api

--- a/views/index.html
+++ b/views/index.html
@@ -712,7 +712,7 @@
                         <a class="select-item" href="https://www.aeknow.org/">AEKNOW</a>
                     </div>
                 </li>
-                <li><a href="https://www.showdoc.cc/AEASY">DOCUMENT</a></li>
+                <li><a target="_blank" href="https://aeasy.gitbook.io/aeasy/">DOCUMENT</a></li>
                 <li><a class="login" href="./login.html">LOGIN</a></li>
             </ul>
         </div>
