--- a/views/tokens_create.html
+++ b/views/tokens_create.html
@@ -67,7 +67,7 @@
     <div class="menu">
         <ul>
 
-            <li><a href="https://www.showdoc.cc/AEASY">DOCUMENT</a></li>
+            <li><a href="https://aeasy.gitbook.io/aeasy/">DOCUMENT</a></li>
             <li><a class="login" id="go-logout" href="#">LOGOUT</a></li>
         </ul>
     </div>
