--- a/views/user.html
+++ b/views/user.html
@@ -40,7 +40,7 @@
     <div class="menu">
         <ul>
 
-            <li><a href="https://www.showdoc.cc/AEASY">DOCUMENT</a></li>
+            <li><a href="https://aeasy.gitbook.io/aeasy/">DOCUMENT</a></li>
             <li><a class="login" id="go-logout" href="#">LOGOUT</a></li>
         </ul>
     </div>
@@ -76,7 +76,7 @@
             </div>
             <div style="overflow:hidden;">
                 <div class="start" style="float: left">
-                    <a href="https://www.showdoc.cc/AEASY" target="_blank">Document</a>
+                    <a href="https://aeasy.gitbook.io/aeasy/" target="_blank">Document</a>
                 </div>
                 <div class="start2" style="float: left;margin-left: 20px">
                     <a href="/token" target="_blank">Tokens</a>
